docs: improve and correct docs
